Added User, Lot and account create functionality
