# apps/api/internal/models/user.go
@@ -1,0 +1,17 @@
+package models
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+	"gorm.io/gorm"
+)
+
+type User struct {
+	ID        uuid.UUID      `gorm:"type:uuid;default:gen_random_uuid();primaryKey" json:"id"`
+	CreatedAt time.Time      `json:"created_at"`
+	UpdatedAt time.Time      `json:"updated_at"`
+	DeletedAt gorm.DeletedAt `gorm:"index"                                          json:"-"`
+	FirstName string         `gorm:"not null"                                       json:"first_name"`
+	LastName  string         `gorm:"not null"                                       json:"last_name"`
+}
